--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@
 .qodana
 build
 
-# LG cache directory
+# Listing Generator
 .lg-cache/
+lg-cfg/agent/workspace-and-personal.md
 
 # Claude Code - local settings only
 .claude/settings.local.json
