Improved handling of the `send-to-ai` tag

--- a/lg-cfg/sections.yaml
+++ b/lg-cfg/sections.yaml
@@ -6,6 +6,9 @@ src:
       - "/build.gradle.kts"
       - "/settings.gradle.kts"
       - "/src/main/"
+    when:
+      - condition: "NOT TAGSET:intellij-plugin:send-to-ai"
+        block: ["/src/main/kotlin/lg/intellij/services/ai/"]
     children:
       src/main:
         mode: allow
