Establishing a personal brand

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,11 @@ pluginRepositoryUrl = https://github.com/Max-Moro/lg-intellij
 # SemVer format -> https://semver.org
 pluginVersion = 1.0.0
 
+# Vendor information
+pluginVendor = Max-Moro
+pluginVendorEmail = mmocentre@gmail.com
+pluginVendorUrl = https://github.com/Max-Moro
+
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 252
 pluginUntilBuild = 253.*
