--- a/lg-cfg/sections.yaml
+++ b/lg-cfg/sections.yaml
@@ -3,6 +3,7 @@ src:
   filters:
     mode: allow
     allow:
+      - "/gradle.properties"
       - "/build.gradle.kts"
       - "/settings.gradle.kts"
       - "/src/main/"
