--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -29,7 +29,7 @@
             <li>Git branch comparison support</li>
         </ul>
         <br/>
-        <p>Visit <a href="https://github.com/Max-Moro/listing-generator">Listing Generator Documentation</a> for more information.</p>
+        <p>Visit <a href="https://github.com/Max-Moro/lg-cli">Listing Generator</a> for more information.</p>
     ]]></description>
     
     <!-- Change notes for this version -->
