Improved update process via lightweight GET request to PyPI

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -10,7 +10,7 @@ settings.developer.mode.label=Developer mode
 settings.developer.mode.comment=Enable to test unreleased CLI versions with local Python interpreter
 settings.python.interpreter.label=Python Interpreter:
 settings.python.interpreter.browse.title=Select Python Interpreter
-settings.python.interpreter.comment=[Developer Mode Only] Path to Python interpreter in CLI development venv
+settings.python.interpreter.comment=Path to Python interpreter in CLI development venv
 
 ## AI Integration Group
 settings.group.ai=AI Integration
