--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,63 +1,212 @@
-# GitHub Actions Workflow created for handling the release process based on the draft release prepared with the Build workflow.
-# Running the publishPlugin task requires all the following secrets to be provided: PUBLISH_TOKEN, PRIVATE_KEY, PRIVATE_KEY_PASSWORD, CERTIFICATE_CHAIN.
-# See https://plugins.jetbrains.com/docs/intellij/plugin-signing.html for more information.
+# GitHub Actions Workflow: Release
+#
+# Manual workflow to publish a new release:
+# 1. Validate version vs branch (e.g., 0.9.1 can only be released from v0.9.x)
+# 2. Validate CLI compatibility (CliVersion.REQUIRED_VERSION must match plugin version)
+# 3. Extract [Unreleased] section from CHANGELOG.md
+# 4. Build plugin
+# 5. Publish plugin to JetBrains Marketplace
+# 6. Create GitHub Release with changelog notes
+# 7. Create PR to update CHANGELOG.md (move [Unreleased] → [X.Y.Z])
+#
+# Trigger: Manual (workflow_dispatch)
 
 name: Release
+
 on:
-  release:
-    types: [prereleased, released]
+  workflow_dispatch:
+    inputs:
+      prerelease:
+        description: 'Pre-release (mark as pre-release on GitHub)'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
-
-  # Prepare and publish the plugin to JetBrains Marketplace repository
-  release:
-    name: Publish Plugin
+  # Job 1: Validate version and extract changelog
+  validate:
+    name: Validate Release
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
+    outputs:
+      version: ${{ steps.properties.outputs.version }}
+      cli_version: ${{ steps.properties.outputs.cli_version }}
+      changelog: ${{ steps.changelog.outputs.content }}
     steps:
-
-      # Free GitHub Actions Environment Disk Space
-      - name: Maximize Build Space
-        uses: jlumbroso/free-disk-space@v1.3.1
-        with:
-          tool-cache: false
-          large-packages: false
-
-      # Check out the current repository
       - name: Fetch Sources
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.release.tag_name }}
 
-      # Set up the Java environment for the next steps
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: zulu
           java-version: 21
 
-      # Setup Gradle
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Extract Version Properties
+        id: properties
+        shell: bash
+        run: |
+          # Extract plugin version from gradle.properties
+          VERSION=$(grep '^pluginVersion' gradle.properties | cut -d'=' -f2 | xargs)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Extracted plugin version: $VERSION"
+
+          # Extract CLI version from Kotlin code
+          CLI_VERSION=$(grep 'const val REQUIRED_VERSION' src/main/kotlin/lg/intellij/cli/CliVersion.kt | sed -E 's/.*"([^"]+)".*/\1/')
+          echo "cli_version=$CLI_VERSION" >> $GITHUB_OUTPUT
+          echo "Extracted CLI version: $CLI_VERSION"
+
+      - name: Validate Version vs Branch
+        shell: bash
+        run: |
+          VERSION="${{ steps.properties.outputs.version }}"
+          BRANCH="${{ github.ref_name }}"
+
+          echo "Validating version $VERSION against branch $BRANCH"
+
+          # Extract MAJOR.MINOR from version (e.g., "0.9.0" -> "0.9")
+          VERSION_PREFIX=$(echo "$VERSION" | cut -d. -f1,2)
+
+          # Check if branch is maintenance/next branch
+          # Matches: v0.9.x, next-v0.9.x, 0.9.x, next-0.9.x
+          if [[ "$BRANCH" =~ ^(next-)?v?([0-9]+\.[0-9]+)\.x$ ]]; then
+            BRANCH_VERSION="${BASH_REMATCH[2]}"
+
+            if [ "$VERSION_PREFIX" != "$BRANCH_VERSION" ]; then
+              echo "❌ ERROR: Version mismatch!"
+              echo ""
+              echo "  Version in gradle.properties: $VERSION (${VERSION_PREFIX}.x series)"
+              echo "  Current branch: $BRANCH (${BRANCH_VERSION}.x series)"
+              echo ""
+              echo "Cannot release version $VERSION from branch $BRANCH"
+              echo ""
+              echo "Possible solutions:"
+              echo "  1. Update version in gradle.properties to ${BRANCH_VERSION}.Z"
+              echo "  2. Switch to correct branch for version $VERSION"
+              exit 1
+            fi
+
+            echo "✅ Version $VERSION matches branch $BRANCH (${BRANCH_VERSION}.x series)"
+          else
+            echo "✅ No version constraint for branch $BRANCH (any version allowed)"
+          fi
+
+      - name: Validate CLI Compatibility
+        shell: bash
+        run: |
+          PLUGIN_VERSION="${{ steps.properties.outputs.version }}"
+          CLI_VERSION="${{ steps.properties.outputs.cli_version }}"
+
+          echo "Validating CLI compatibility"
+          echo "  Plugin version: $PLUGIN_VERSION"
+          echo "  CLI version: $CLI_VERSION"
+
+          # Extract MAJOR.MINOR from both versions
+          PLUGIN_PREFIX=$(echo "$PLUGIN_VERSION" | cut -d. -f1,2)
+          CLI_PREFIX=$(echo "$CLI_VERSION" | cut -d. -f1,2)
+
+          if [ "$PLUGIN_PREFIX" != "$CLI_PREFIX" ]; then
+            echo "❌ ERROR: CLI compatibility mismatch!"
+            echo ""
+            echo "  Plugin version: $PLUGIN_VERSION (${PLUGIN_PREFIX}.x series)"
+            echo "  CliVersion.REQUIRED_VERSION: $CLI_VERSION (${CLI_PREFIX}.x series)"
+            echo ""
+            echo "Plugin must be compatible with CLI ^$CLI_VERSION"
+            echo ""
+            echo "Please update CliVersion.REQUIRED_VERSION in src/main/kotlin/lg/intellij/cli/CliVersion.kt"
+            exit 1
+          fi
+
+          echo "✅ Plugin $PLUGIN_VERSION is compatible with CLI ^$CLI_VERSION"
+
+      - name: Extract Changelog
+        id: changelog
+        shell: bash
+        run: |
+          # Use Gradle changelog plugin to extract [Unreleased] section
+          RELEASE_NOTE="./build/tmp/release_note.txt"
+          ./gradlew getChangelog --unreleased --no-header --quiet --console=plain --output-file=$RELEASE_NOTE
+
+          # Check if file exists and is not empty
+          if [ ! -f "$RELEASE_NOTE" ] || [ ! -s "$RELEASE_NOTE" ]; then
+            echo "❌ ERROR: [Unreleased] section is empty or not found in CHANGELOG.md"
+            exit 1
+          fi
+
+          # Read changelog content and write to output
+          CHANGELOG_CONTENT=$(cat "$RELEASE_NOTE")
+
+          # Write to GITHUB_OUTPUT (handle multiline)
+          {
+            echo "content<<EOF"
+            echo "$CHANGELOG_CONTENT"
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
+
+          echo "Extracted changelog content:"
+          echo "$CHANGELOG_CONTENT"
+
+  # Job 2: Build plugin
+  build:
+    name: Build Plugin
+    needs: validate
+    runs-on: ubuntu-latest
+    steps:
+      - name: Fetch Sources
+        uses: actions/checkout@v4
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: 21
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Build Plugin
+        run: ./gradlew buildPlugin
+
+      - name: Prepare Plugin Artifact
+        id: artifact
+        shell: bash
+        run: |
+          cd ${{ github.workspace }}/build/distributions
+          FILENAME=$(ls *.zip)
+          echo "filename=$FILENAME" >> $GITHUB_OUTPUT
+          echo "Built plugin: $FILENAME"
+
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: plugin-distribution
+          path: ./build/distributions/*.zip
+
+  # Job 3: Publish to JetBrains Marketplace and create GitHub Release
+  publish:
+    name: Publish Release
+    needs: [validate, build]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Fetch Sources
+        uses: actions/checkout@v4
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: 21
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
           cache-read-only: true
 
-      # Update the Unreleased section with the current release note
-      - name: Patch Changelog
-        if: ${{ github.event.release.body != '' }}
-        env:
-          CHANGELOG: ${{ github.event.release.body }}
-        run: |
-          RELEASE_NOTE="./build/tmp/release_note.txt"
-          mkdir -p "$(dirname "$RELEASE_NOTE")"
-          echo "$CHANGELOG" > $RELEASE_NOTE
-
-          ./gradlew patchChangelog --release-note-file=$RELEASE_NOTE
-
-      # Publish the plugin to JetBrains Marketplace
-      - name: Publish Plugin
+      - name: Publish Plugin to JetBrains Marketplace
         env:
           PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
           CERTIFICATE_CHAIN: ${{ secrets.CERTIFICATE_CHAIN }}
@@ -65,36 +214,82 @@ jobs:
           PRIVATE_KEY_PASSWORD: ${{ secrets.PRIVATE_KEY_PASSWORD }}
         run: ./gradlew publishPlugin
 
-      # Upload an artifact as a release asset
-      - name: Upload Release Asset
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ github.event.release.tag_name }} ./build/distributions/*
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: plugin-distribution
+          path: dist
 
-      # Create a pull request
-      - name: Create Pull Request
-        if: ${{ steps.properties.outputs.changelog != '' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ needs.validate.outputs.version }}
+          name: v${{ needs.validate.outputs.version }}
+          body: |
+            ## Changelog
+
+            ${{ needs.validate.outputs.changelog }}
+
+            ---
+
+            **Compatible with Listing Generator CLI**: ^${{ needs.validate.outputs.cli_version }}
+
+            **Full Changelog**: https://github.com/${{ github.repository }}/blob/main/CHANGELOG.md
+          files: dist/*.zip
+          prerelease: ${{ github.event.inputs.prerelease }}
+          draft: false
+
+  # Job 4: Update CHANGELOG.md (create PR)
+  changelog:
+    name: Update Changelog
+    needs: [validate, publish]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+    steps:
+      - name: Fetch Sources
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: 21
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Update CHANGELOG.md
+        shell: bash
         run: |
-          VERSION="${{ github.event.release.tag_name }}"
-          BRANCH="changelog-update-$VERSION"
-          LABEL="release changelog"
+          VERSION="${{ needs.validate.outputs.version }}"
 
-          git config user.email "action@github.com"
-          git config user.name "GitHub Action"
+          # Use Gradle changelog plugin to patch CHANGELOG.md
+          # This moves [Unreleased] content to [VERSION] - DATE
+          ./gradlew patchChangelog --release-version="$VERSION"
 
-          git checkout -b $BRANCH
-          git commit -am "Changelog update - $VERSION"
-          git push --set-upstream origin $BRANCH
-          
-          gh label create "$LABEL" \
-            --description "Pull requests with release changelog update" \
-            --force \
-            || true
+          echo "Updated CHANGELOG.md for version $VERSION"
 
-          gh pr create \
-            --title "Changelog update - \`$VERSION\`" \
-            --body "Current pull request contains patched \`CHANGELOG.md\` file for the \`$VERSION\` version." \
-            --label "$LABEL" \
-            --head $BRANCH
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v7
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: changelog-update-v${{ needs.validate.outputs.version }}
+          title: 'Changelog update - v${{ needs.validate.outputs.version }}'
+          body: |
+            ## Changelog Update
+
+            Current `[Unreleased]` section has been released as `v${{ needs.validate.outputs.version }}`.
+
+            This PR updates `CHANGELOG.md`:
+            - Moves `[Unreleased]` content to `[${{ needs.validate.outputs.version }}] - $(date +%Y-%m-%d)`
+            - Creates new empty `[Unreleased]` section for future changes
+
+            **Auto-generated by release workflow**
+          commit-message: 'chore: update changelog for v${{ needs.validate.outputs.version }}'
+          committer: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
+          author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
+          labels: changelog
