fix: change plugin ID from lg.intellij to maxmoro.lg
- Update plugin.xml: id and settings configurable ID
- Update gradle.properties: pluginGroup
- Update settings dialog references in code (3 places)
- Update documentation example

This fixes Plugin Verifier error about forbidden 'intellij' word in ID.

Package structure (lg.intellij.*) remains unchanged as it's internal code organization.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = lg.intellij
+pluginGroup = maxmoro.lg
 pluginName = Listing Generator
 pluginRepositoryUrl = https://github.com/Max-Moro/lg-intellij
 # SemVer format -> https://semver.org
