--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <!-- Unique plugin identifier -->
-    <id>lg.intellij</id>
+    <id>maxmoro.lg</id>
     
     <!-- Plugin display name -->
     <name>Listing Generator</name>
@@ -50,10 +50,10 @@
             canCloseContents="false"/>
         
         <!-- Settings -->
-        <applicationConfigurable 
+        <applicationConfigurable
             parentId="tools"
             instance="lg.intellij.settings.LgSettingsConfigurable"
-            id="lg.intellij.settings"
+            id="maxmoro.lg.settings"
             key="settings.display.name"
             bundle="messages.LgBundle"/>
     </extensions>
